--- a/index.html
+++ b/index.html
@@ -11,6 +11,40 @@
         <title>Calculator</title>
     </head>
 
-    <body>    
+    <body>
+        <div id="calculator">
+            <div id="value"></div>
+
+            <div id="buttons">
+                <div id="numbers">
+                    <div class="numbers-trium">
+                        <button class="number">7</button>
+                        <button class="number">8</button>
+                        <button class="number">9</button>
+                    </div>
+
+                    <div class="numbers-trium">
+                        <button class="number">4</button>
+                        <button class="number">5</button>
+                        <button class="number">6</button>
+                    </div>
+
+                    <div class="numbers-trium">
+                        <button class="number">1</button>
+                        <button class="number">2</button>
+                        <button class="number">3</button>
+                    </div>
+
+                    <button class="number">0</button>
+                </div>
+
+                <div id="operations">
+                    <button class="operation">+</button>
+                    <button class="operation">-</button>
+                    <button class="operation">&times;</button>
+                    <button class="operation">&divide;</button>
+                </div>
+            </div>
+        </div>   
     </body>
 </html>
