--- a/index.html
+++ b/index.html
@@ -16,33 +16,26 @@
             <div id="display">0</div>
 
             <div id="buttons">
-                <div id="numbers">
-                    <div class="numbers-trium">
-                        <button id="7" class="number">7</button>
-                        <button id="8" class="number">8</button>
-                        <button id="9" class="number">9</button>
-                    </div>
-
-                    <div class="numbers-trium">
-                        <button id="4" class="number">4</button>
-                        <button id="5" class="number">5</button>
-                        <button id="6" class="number">6</button>
-                    </div>
-
-                    <div class="numbers-trium">
-                        <button id="1" class="number">1</button>
-                        <button id="2" class="number">2</button>
-                        <button id="3" class="number">3</button>
-                    </div>
-
+                <div id="numbers">                    
+                    <button id="7" class="number">7</button>
+                    <button id="8" class="number">8</button>
+                    <button id="9" class="number">9</button>                
+                    <button id="4" class="number">4</button>
+                    <button id="5" class="number">5</button>
+                    <button id="6" class="number">6</button>                
+                    <button id="1" class="number">1</button>
+                    <button id="2" class="number">2</button>
+                    <button id="3" class="number">3</button>                
                     <button id="0" class="number">0</button>
+                    <button id="." class="number">.</button>
+                    <button id="=" class="number">=</button>
                 </div>
 
                 <div id="operations">
                     <button class="operation">&times;</button>
                     <button class="operation">&divide;</button>
-                    <button class="operation">+</button>
-                    <button class="operation">-</button>
+                    <button class="operation">&plus;</button>
+                    <button class="operation">&minus;</button>
                 </div>
             </div>
         </div>   
