Resize layout, added a bit of functionality

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                     <button id="2" class="number">2</button>
                     <button id="3" class="number">3</button>                
                     <button id="0" class="number">0</button>
-                    <button id="." class="number">.</button>
-                    <button id="=" class="number">=</button>
+                    <button id="dot" class="number">.</button>
+                    <button id="equal">=</button>
                 </div>
 
                 <div id="operations">
-                    <button class="operation">&times;</button>
-                    <button class="operation">&divide;</button>
-                    <button class="operation">&plus;</button>
-                    <button class="operation">&minus;</button>
+                    <button id= "x" class="operation">&times;</button>
+                    <button id= "/" class="operation">&divide;</button>
+                    <button id= "+" class="operation">&plus;</button>
+                    <button id= "-" class="operation">&minus;</button>
                 </div>
             </div>
         </div>   
