Get calculator to work basic operations

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <button id="3" class="number">3</button>                
                     <button id="0" class="number">0</button>
                     <button id="dot" class="number">.</button>
-                    <button id="equal">=</button>
+                    <button id="equal" class="number">=</button>
                 </div>
 
                 <div id="operations">
